# akapack_program_kasir

./: CLAUDE_HANDOFF.md  CLAUDE_IMPLEMENTATION_PLAN.md  CLAUDE_TASK.md  SUPABASE_SETUP.md  TAURI_SETUP.md  next.config.ts  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: tauri.yml
scripts/: check-supabase.mjs  gen-icon.mjs  seed-supabase.mjs  tauri-export.mjs
src/: proxy.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  manifest.ts
src/components/: auth-guard.tsx  category-icon.tsx  data-bootstrap.tsx  product-img.tsx  theme-toggle.tsx
src/lib/: accounting.ts  constants.ts  mock-data.ts  print-receipt.ts  use-books.ts  utils.ts
src/stores/: use-account-store.ts  use-active-outlet-store.ts  use-asset-store.ts  use-attendance-store.ts  use-category-store.ts  use-closing-store.ts  use-current-user-store.ts  use-customer-store.ts  use-employee-store.ts  use-held-order-store.ts  use-inventory-store.ts  use-journal-store.ts  use-outlet-store.ts  use-product-store.ts  use-promotion-store.ts  use-purchase-store.ts  use-quotation-store.ts  use-salesorder-store.ts  use-settings-store.ts  use-shift-store.ts  use-stock-movement-store.ts  use-stockout-store.ts  use-store-cart.ts  use-supplier-store.ts  use-transaction-store.ts  use-variant-store.ts
src/types/: index.ts
supabase/migrations/: 0001_init.sql  0002_tenant_pricing_audit.sql  0003_grants.sql  0004_disable_rls_internal.sql  0009_accounting.sql  (+16 more)
(+85 files in other folders)
